# dictator

./: .gitignore  ANALYSIS_VAD_TTS_INTERRUPT.md  ARCHITECTURE_EVENT_DRIVEN.md  CHECKPOINT_N8N_INTEGRATION.md  CLAUDE.md  IMPLEMENTATION_VAD_TTS_FIX.md  README.md  README_VOICE_ASSISTANT.md  SERVICE.md  add_to_startup.bat  check_services.ps1  cleanup_dictator.ps1  config.yaml  configure_password.bat  configure_service.bat  install_service.bat  install_service_fixed.bat  install_startup.bat  migrate_to_app_mode.bat  pyproject.toml  remove_from_startup.bat  requirements.txt  restart_dictator.bat  run_app.bat  run_local.bat  run_local_admin.bat  setup.bat  stop_app.bat  test_auto_restart.py  test_menu_callbacks.py  test_ollama_discovery.py  test_ollama_integration.py  test_thinking_tags.py  test_vad_tts_interrupt.py  uninstall_service.bat  verify_deps.py
.claude/: settings.local.json
installer/: README.md
installer/hooks/: hook-ctranslate2.py
installer/launcher/: Dictator.spec  build_launcher.py  launcher.py
installer/linux/: install.sh  uninstall.sh
installer/shared/: __init__.py  installer_base.py  state_manager.py  state_schema.py  validation.py
installer/uninstaller/: build_uninstaller.py  uninstall.spec  uninstaller.py
installer/windows/: DictatorInstaller.spec  __init__.py  build_installer.py  config_wizard.py  dependency_checker.py  detection.py  installer_core.py  installer_gui.py  model_downloader.py  requirements.txt  rollback_manager.py  service_installer.py  shortcuts.py  updater.py  version_info.txt
logs/run-20251112-210340/: dictator.jsonl  thread_monitor.latest.json
logs/run-20251112-210604/: dictator.jsonl  thread_monitor.latest.json
logs/run-20251112-210625/: dictator.jsonl  thread_monitor.latest.json
logs/run-20251112-210722/: dictator.jsonl  thread_monitor.latest.json
logs/run-20251112-210809/: dictator.jsonl  thread_monitor.latest.json
logs/run-20251112-211625/: dictator.jsonl  thread_monitor.latest.json
logs/run-20251112-211631/: dictator.jsonl  thread_monitor.latest.json
n8n_workflows/: Agent w Search.json  Demo workflow.json  dictator_toolcalling.json
src/dictator/: __init__.py  audio_processor.py  health_check.py  logging_setup.py  main.py  overlay.py  service.py  tray.py  tts_engine.py
src/dictator/voice/: events.py  (+5 more)
tests/: manual_test_session_counter.py  test_concurrency_stress.py
tests/integration/: test_degradation.py  test_ollama_integration.py
tools/: remove_emojis.py
(+13 files in other folders)
